remove duplicate port listening

--- a/provider/haproxy/haproxy_template.cfg
+++ b/provider/haproxy/haproxy_template.cfg
@@ -28,7 +28,7 @@ listen default
 {{$listener := $lbconfig.FrontendService}}
 {{$svc := $listener.BackendService -}}
 listen {{$listener.Name}}
-mode {{$listener.Protocol}}
+mode tcp
 bind *:{{$listener.Port}}
 server {{$svc.Name}}  {{$svc.IP}}:{{$svc.Port}} check weight 1 maxconn 100000 check inter 4000
 {{end -}}
